BE/Aucation/src/main/java/com/example/aucation/common/error/InvalidJwtException.java
package com.example.aucation.common.error;

public class InvalidJwtException extends JwtException {

    public InvalidJwtException(ApplicationError error) {
        super(error);
    }
}
